Implement cmd with perfect hashing

--- a/programs/solisp/Cargo.toml
+++ b/programs/solisp/Cargo.toml
@@ -17,4 +17,5 @@ default = []
 [dependencies]
 anchor-lang = "0.17.0"
 anchor-spl = "0.17.0"
+phf = { version = "0.10.0", features = ["macros"] }
 rust_lisp = { version = "0.2.0", path = "../../../crates/rust_lisp" }
